--- a/static/index.html
+++ b/static/index.html
@@ -32,10 +32,10 @@
             <img src="./assets/images/hungrybird.jpg" class="gallery__img" alt="Image 3">
           </figure>
           <figure class="gallery__item gallery__item--4">
-            <img src="./assets/images/turtle.jpg" class="gallery__img" alt="Image 4">
+            <img src="./assets/images/turtleface.jpg" class="gallery__img" alt="Image 4">
           </figure>
           <figure class="gallery__item gallery__item--5">
-            <img src="./assets/images/youlookingatmebird.jpg" class="gallery__img" alt="Image 5">
+            <img src="./assets/images/splashybird.jpg" class="gallery__img" alt="Image 5">
           </figure>
           <figure class="gallery__item gallery__item--6">
             <img src="./assets/images/alligatorwater.jpg" class="gallery__img" alt="Image 6">
@@ -51,7 +51,10 @@
            container: "#my-gallery",
            cloudName: "sparklemoon",
            carouselStyle: "none",
-           mediaAssets: [{tag: "wildlife"},
+           mediaAssets: [{tag: "wildlife",
+           transformation:{
+
+              crop:"fill"}},
            
          ]
            
