removed carousel on cloudinary

--- a/static/index.html
+++ b/static/index.html
@@ -50,10 +50,11 @@
            const myGallery= cloudinary.galleryWidget({
            container: "#my-gallery",
            cloudName: "sparklemoon",
-          //  carouselStyle: "none",
+           carouselStyle: "none",
            mediaAssets: [{tag: "wildlife",
            transformation:{
-              crop:"fill"}},
+              crop:"fill"}
+        },
          ]
            }); 
            myGallery.render();
